src/.antlr/CloveGrammarParser.java
// Generated from e:/ASU/SER502/Project/SER502-clove-Team10/src/CloveGrammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CloveGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, EQUAL=22, NOTEQUAL=23, LESST=24, 
		GREATERT=25, LESSTEQUAL=26, GREATERTEQUAL=27, MOD=28, DIVIDE=29, MULTIPLY=30, 
		ADD=31, SUBTRACT=32, AND=33, OR=34, NOT=35, ID=36, NUM=37, Str=38, WS=39, 
		COMMENT=40;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_relational_expr = 2, RULE_condition = 3, 
		RULE_declarativeStatement = 4, RULE_assignmentStatement = 5, RULE_idAssignmentStatement = 6, 
		RULE_printStatement = 7, RULE_ifStatements = 8, RULE_elseStatements = 9, 
		RULE_conditionStatement = 10, RULE_whileStatement = 11, RULE_ternaryOperator = 12, 
		RULE_forLoop = 13, RULE_forEachLoop = 14, RULE_expr = 15, RULE_bool = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "relational_expr", "condition", "declarativeStatement", 
			"assignmentStatement", "idAssignmentStatement", "printStatement", "ifStatements", 
			"elseStatements", "conditionStatement", "whileStatement", "ternaryOperator", 
			"forLoop", "forEachLoop", "expr", "bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'int'", "'='", "'Str'", "'bool'", "'print'", 
			"'if'", "'{'", "'}'", "'else'", "'while'", "'?'", "':'", "'for'", "'in'", 
			"'range'", "','", "'true'", "'false'", "'=='", "'!='", "'<'", "'>'", 
			"'<='", "'>='", "'%'", "'/'", "'*'", "'+'", "'-'", "'and'", "'or'", "'not'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "EQUAL", 
			"NOTEQUAL", "LESST", "GREATERT", "LESSTEQUAL", "GREATERTEQUAL", "MOD", 
			"DIVIDE", "MULTIPLY", "ADD", "SUBTRACT", "AND", "OR", "NOT", "ID", "NUM", 
			"Str", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CloveGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CloveGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(34);
				statement();
				setState(35);
				match(T__0);
				}
				}
				setState(39); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 240521389012L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Relational_exprContext relational_expr() {
			return getRuleContext(Relational_exprContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public DeclarativeStatementContext declarativeStatement() {
			return getRuleContext(DeclarativeStatementContext.class,0);
		}
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public IdAssignmentStatementContext idAssignmentStatement() {
			return getRuleContext(IdAssignmentStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public ConditionStatementContext conditionStatement() {
			return getRuleContext(ConditionStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public TernaryOperatorContext ternaryOperator() {
			return getRuleContext(TernaryOperatorContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public ForEachLoopContext forEachLoop() {
			return getRuleContext(ForEachLoopContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				relational_expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				condition(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(44);
				declarativeStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(45);
				assignmentStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(46);
				idAssignmentStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(47);
				printStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(48);
				conditionStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(49);
				whileStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(50);
				ternaryOperator();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(51);
				forLoop();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(52);
				forEachLoop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Relational_exprContext extends ParserRuleContext {
		public Relational_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relational_expr; }
	 
		public Relational_exprContext() { }
		public void copyFrom(Relational_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParenthesesRelExprContext extends Relational_exprContext {
		public Relational_exprContext relational_expr() {
			return getRuleContext(Relational_exprContext.class,0);
		}
		public ParenthesesRelExprContext(Relational_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterParenthesesRelExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitParenthesesRelExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RelExprContext extends Relational_exprContext {
		public Token relationalOp;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(CloveGrammarParser.EQUAL, 0); }
		public TerminalNode NOTEQUAL() { return getToken(CloveGrammarParser.NOTEQUAL, 0); }
		public TerminalNode LESST() { return getToken(CloveGrammarParser.LESST, 0); }
		public TerminalNode GREATERT() { return getToken(CloveGrammarParser.GREATERT, 0); }
		public TerminalNode LESSTEQUAL() { return getToken(CloveGrammarParser.LESSTEQUAL, 0); }
		public TerminalNode GREATERTEQUAL() { return getToken(CloveGrammarParser.GREATERTEQUAL, 0); }
		public RelExprContext(Relational_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterRelExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitRelExpr(this);
		}
	}

	public final Relational_exprContext relational_expr() throws RecognitionException {
		Relational_exprContext _localctx = new Relational_exprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_relational_expr);
		int _la;
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new ParenthesesRelExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				match(T__1);
				setState(56);
				relational_expr();
				setState(57);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new RelExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				expr(0);
				setState(60);
				((RelExprContext)_localctx).relationalOp = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 264241152L) != 0)) ) {
					((RelExprContext)_localctx).relationalOp = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(61);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	 
		public ConditionContext() { }
		public void copyFrom(ConditionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BooleanConditionContext extends ConditionContext {
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public BooleanConditionContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterBooleanCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitBooleanCondition(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConditionWithParenthesesContext extends ConditionContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ConditionWithParenthesesContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterConditionWithParentheses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitConditionWithParentheses(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NotIDBooleanContext extends ConditionContext {
		public TerminalNode NOT() { return getToken(CloveGrammarParser.NOT, 0); }
		public TerminalNode ID() { return getToken(CloveGrammarParser.ID, 0); }
		public NotIDBooleanContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterNotIDBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitNotIDBoolean(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NotConditionContext extends ConditionContext {
		public TerminalNode NOT() { return getToken(CloveGrammarParser.NOT, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public NotConditionContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterNotCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitNotCondition(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BooleanIdOperationContext extends ConditionContext {
		public Token booleanOp;
		public List<TerminalNode> ID() { return getTokens(CloveGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CloveGrammarParser.ID, i);
		}
		public TerminalNode AND() { return getToken(CloveGrammarParser.AND, 0); }
		public TerminalNode OR() { return getToken(CloveGrammarParser.OR, 0); }
		public TerminalNode NOT() { return getToken(CloveGrammarParser.NOT, 0); }
		public BooleanIdOperationContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterBooleanIdOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitBooleanIdOperation(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConditionRelExprContext extends ConditionContext {
		public Relational_exprContext relational_expr() {
			return getRuleContext(Relational_exprContext.class,0);
		}
		public ConditionRelExprContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterConditionRelExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitConditionRelExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConditionConnectorContext extends ConditionContext {
		public Token booleanOp;
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode AND() { return getToken(CloveGrammarParser.AND, 0); }
		public TerminalNode OR() { return getToken(CloveGrammarParser.OR, 0); }
		public ConditionConnectorContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterConditionConnector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitConditionConnector(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		return condition(0);
	}

	private ConditionContext condition(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConditionContext _localctx = new ConditionContext(_ctx, _parentState);
		ConditionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_condition, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new ConditionWithParenthesesContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(66);
				match(T__1);
				setState(67);
				condition(0);
				setState(68);
				match(T__2);
				}
				break;
			case 2:
				{
				_localctx = new NotConditionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(70);
				match(NOT);
				setState(71);
				condition(6);
				}
				break;
			case 3:
				{
				_localctx = new ConditionRelExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(72);
				relational_expr();
				}
				break;
			case 4:
				{
				_localctx = new BooleanIdOperationContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(73);
				match(ID);
				setState(74);
				((BooleanIdOperationContext)_localctx).booleanOp = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 60129542144L) != 0)) ) {
					((BooleanIdOperationContext)_localctx).booleanOp = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(75);
				match(ID);
				}
				break;
			case 5:
				{
				_localctx = new NotIDBooleanContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(76);
				match(NOT);
				setState(77);
				match(ID);
				}
				break;
			case 6:
				{
				_localctx = new BooleanConditionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(78);
				bool();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ConditionConnectorContext(new ConditionContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_condition);
					setState(81);
					if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
					setState(82);
					((ConditionConnectorContext)_localctx).booleanOp = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
						((ConditionConnectorContext)_localctx).booleanOp = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(83);
					condition(6);
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarativeStatementContext extends ParserRuleContext {
		public DeclarativeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarativeStatement; }
	 
		public DeclarativeStatementContext() { }
		public void copyFrom(DeclarativeStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationStatementContext extends DeclarativeStatementContext {
		public Token dtype;
		public TerminalNode ID() { return getToken(CloveGrammarParser.ID, 0); }
		public DeclarationStatementContext(DeclarativeStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterDeclarationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitDeclarationStatement(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IntDeclarationStatementContext extends DeclarativeStatementContext {
		public TerminalNode ID() { return getToken(CloveGrammarParser.ID, 0); }
		public TerminalNode NUM() { return getToken(CloveGrammarParser.NUM, 0); }
		public IntDeclarationStatementContext(DeclarativeStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterIntDeclarationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitIntDeclarationStatement(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BoolDeclarationStatementContext extends DeclarativeStatementContext {
		public TerminalNode ID() { return getToken(CloveGrammarParser.ID, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public BoolDeclarationStatementContext(DeclarativeStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterBoolDeclarationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitBoolDeclarationStatement(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StringDeclarationStatementContext extends DeclarativeStatementContext {
		public TerminalNode ID() { return getToken(CloveGrammarParser.ID, 0); }
		public TerminalNode Str() { return getToken(CloveGrammarParser.Str, 0); }
		public StringDeclarationStatementContext(DeclarativeStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).enterStringDeclarationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CloveGrammarListener ) ((CloveGrammarListener)listener).exitStringDeclarationStatement(this);
		}
	}

	public final DeclarativeStatementContext declarativeStatement() throws RecognitionException {
		DeclarativeStatementContext _localctx = new DeclarativeStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarativeStatement);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new IntDeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(T__3);
				setState(90);
				match(ID);
				setState(91);
				match(T__4);
				setState(92);
				match(NUM);
				}
				break;
			case 2:
				_localctx = new StringDeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(T__5);
				setState(94);
				match(ID);
				setState(95);
				match(T__4);
				setState(96);
				match(Str);
				}
				break;
			case 3:
				_localctx = new BoolDeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(T__6);
				setState(98);
				match(ID);
				setState(99);
				match(T__4);
				setState(100);
				condition(0);
				}
				break;
			case 4:
				_localctx = new DeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				((DeclarationStatementContext)_localctx).dtype = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 208L) != 0)) ) {
					((DeclarationStatementContext)_localctx).dtype = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(102);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
